# mx-sdk-rs-0.20.1-versions-changed

./: CHANGELOG.md  sizes.sh
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/crowdfunding-dct/: Cargo.toml
contracts/examples/crowdfunding-erc20/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/crypto-kitties/common/kitty/: Cargo.toml
denali/: Cargo.toml  example.scen.json
denali/src/: account.rs  account_check.rs  account_raw.rs  account_raw_check.rs  dct.rs  dct_check.rs  dct_raw.rs  dct_raw_check.rs  lib.rs  scenario.rs  scenario_raw.rs
dharitri-codec/: Cargo.toml
dharitri-codec-derive/: Cargo.toml
dharitri-codec/src/: lib.rs
dharitri-codec/tests/: derive_hygiene.rs
dharitri-wasm/: Cargo.toml
dharitri-wasm-debug/: Cargo.toml
dharitri-wasm-debug/src/: async_data.rs  blockchain_mock.rs  builtin_func_exec.rs  contract_map.rs  lib.rs  managed_test_util.rs  tx_context.rs  tx_input.rs  tx_log.rs  tx_output.rs
dharitri-wasm-debug/tests/: framework_denali_test.rs  hex_call_data_arg_load.rs  managed_codec_test.rs  managed_token_identifier_test.rs  sample_adder.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_linked_list_mapper.rs  test_queue_mapper.rs
dharitri-wasm-derive/: Cargo.toml
dharitri-wasm-node/: Cargo.toml
dharitri-wasm-output/: Cargo.toml
dharitri-wasm/src/: err_msg.rs  lib.rs
(+367 files in other folders)
